--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SoulSeekerDbConnection": "Data Source=HM53; Initial Catalog=SoulmateSeeker; Integrated Security=true; TrustServerCertificate=True"
-  }
+  },
+  "TokenKey":  "super secret key impossible to get cracked ever, if you suceed you will get paid 1000$ every day by the bank of america!"
 }
